examples/bad/kick_result_non_send.mko
// EXPECT: cannot kick
// Map remains non-sendable across kick.
fn use_m(m: map[string]int) -> int {
    0
}

fn main() {
    let m: map[string]int = {}
    crew t {
        let j = t.kick(use_m(m))
        let _ = j.join()
    }
}
